fix: subject column in commits list not too long

--- a/frontend/src/style/_commit.scss
+++ b/frontend/src/style/_commit.scss
@@ -33,6 +33,10 @@
       text-overflow: ellipsis;
     }
 
+    &--subject {
+      max-width: 25vw;
+    }
+
     &:not(:first-child) {
       .uncommitted & {
         color: var(--color-scale-a-3-100);
