--- a/frontend/src/style/_commits.scss
+++ b/frontend/src/style/_commits.scss
@@ -49,6 +49,7 @@
 
     &--subject {
       width: 100%;
+      max-width: 25vw;
     }
 
     &-inner {
